Fix h1 letter spacing

--- a/style.css
+++ b/style.css
@@ -810,7 +810,7 @@ ul.debug-menu {
 @media (max-width: 440px){
   h1 {
     font-size: 42px;
-    letter-spacing: 4px;
+    letter-spacing: normal;
   }
   .nav-icons {
     position: unset;
